--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "webpack --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
-    "start": "npm run dev && webpack-dev-server --config webpack/webpack.dev.js --open"
+    "start": "webpack-dev-server --config webpack/webpack.dev.js --open"
   },
   "repository": {
     "type": "git",
@@ -45,7 +45,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.2"
+    "webpack-merge": "^5.1.2",
+    "raw-loader": "^0.5.1"
   },
   "dependencies": {
     "path": "^0.12.7",
