--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "webpack --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
-    "start": "webpack-dev-server --config webpack/webpack.dev.js --open"
+    "start": "webpack-dev-server --config webpack/webpack.dev.js"
   },
   "repository": {
     "type": "git",
