--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/EricMbouwe/Shooter-Game-JS#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "babel-core": "^6.26.3",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,8 +36,10 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "raw-loader": "^0.5.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
@@ -45,8 +50,7 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.2",
-    "raw-loader": "^0.5.1"
+    "webpack-merge": "^5.1.2"
   },
   "dependencies": {
     "path": "^0.12.7",
