--- a/package.json
+++ b/package.json
@@ -27,18 +27,13 @@
     "babel-jest": "^26.3.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "file-loader": "^6.0.0",
     "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "raw-loader": "^0.5.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
@@ -47,12 +42,17 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-csstree-validator": "^1.8.0",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.2"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack-merge": "^5.1.2",
+    "copy-webpack-plugin": "^6.1.0",
+    "webpack": "^4.44.1",
     "path": "^0.12.7",
     "phaser": "^3.24.1",
     "terser-webpack-plugin": "^4.1.0"
